# CastleIQ

./: .gitignore  README.md
.github/workflows/: tests.yml
CastleIQ Events/: LICENSE  README.md  pyproject.toml
CastleIQ Events/src/castleiq_events/: __init__.py  common.py  event_manager.py  events.py  middlewares.py
CastleIQ HUB/: config.py  create_user.py  event_manager.py  example.env  logger.py  main.py  pyproject.toml  requirements.txt  runner.py
CastleIQ HUB/api/: __init__.py
CastleIQ HUB/api/authentication/: events.py  handlers.py  models.py  services.py
CastleIQ HUB/api/automations/: events.py  handlers.py  models.py  services.py
CastleIQ HUB/api/direct_device_api/: events.py  handlers.py  models.py
CastleIQ HUB/api/ui_api/: events.py  handlers.py
CastleIQ HUB/core/: apps.py
CastleIQ HUB/core/events/: __init__.py  event_manager.py  events.py
CastleIQ HUB/core/services/: __init__.py
CastleIQ HUB/database_manager/: __init__.py
CastleIQ HUB/migrations/modules/: 0_20230328165048_init.py  1_20230504143455_update.py  2_20230531003711_update.py  3_20230531143035_update.py  4_20230531152104_update.py  (+2 more)
CastleIQ HUB/tests/: conftest.py  test_authentication.py  test_core_events.py  test_core_services.py  testmodels.py
CastleIQ UI/: README.md  index.html  package-lock.json  package.json  vite.config.js
CastleIQ UI/src/: App.vue  main.js
dev_WS2812_GRB/: driver.py  events.py  loader.py
dev_WS2812_GRB/effects/: __init__.py  rainbow.py  random_sparks.py  single_color.py  sliding_rainbow.py
dev_virtual_switch/: driver.py  events.py  loader.py
(+18 files in other folders)
